# handbook

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: gh-pages-deployment.yml
about/cividi/: index.html
about/onboarding/: index.html
about/welcome/: index.html
docs/: about.md  index.md
docs/about/: cividi.md  welcome.md
docs/concepts/: about.md  frictionless.md  snapshot.md
docs/drafts/: about.md  your_draft.md
docs/eval/: eval.md  maps.md
docs/events/: about.md  geohackmin.md
docs/home/: cividi.md
docs/maps/: about.md  lab.md  maps_engine_performance_test.md
docs/media/: about.md  media.md
docs/projects/: about.md  projects.md  wohlen.md
docs/styleguide/: about.md
docs/tech/: about.md  frictionless.md  lab.md  pipelines.md  snapshot.md
docs/urbanism/: about.md
drafts/about/: index.html
drafts/your_draft/: index.html
events/: A
events/about/: index.html
events/geohackmin/: index.html
maps/about/: index.html
maps/lab/: index.html
maps/maps_engine_performance_test/: index.html
media/about/: index.html
projects/about/: index.html
search/: search_index.json
styleguide/about/: index.html
tech/about/: index.html
tech/frictionless/: index.html
tech/gemeindescan/: index.html
tech/lab/: index.html
tech/pipelines/: index.html
tech/snapshot/: index.html
urbanism/about/: index.html
