[tool.poetry]
name = "handbook"
version = "0.1.0"
description = "A statically compiled handbook"
authors = ["Oleg Lavrovsky <oleg@cividi.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"
mkdocs-bootswatch = "^1.1"

[tool.poetry.dev-dependencies]
mkdocs = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
